[package]
name = "websocket-ping-pong-paddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
